# seap_notifier

./: Cargo.toml  config.toml
database_api/: .env  Cargo.toml
database_api/src/: full_subscription.rs  lib.rs  service.rs
database_api/src/models/: contract_description.rs  contract_object.rs  mod.rs  subscription.rs  user.rs
database_api/src/service/: subscriptions.rs  users.rs
database_api/src/service/subscriptions/: create.rs  delete.rs  get.rs  get_all.rs  get_by_email.rs  update.rs  utils.rs
database_api/src/service/users/: create.rs  delete.rs  get.rs  get_all.rs  update.rs  utils.rs
notifier/: Cargo.toml
notifier/src/: advertisment.rs  app.rs  mailer.rs  main.rs  scraper.rs  seap.rs
notifier/src/advertisment/: adv_type.rs  assigned_user.rs  contract_type.rs  cpv_code.rs  currency.rs  sys_advertising_notice.rs  sys_notice_state.rs
subscribing_api/: Cargo.toml
subscribing_api/src/: app.rs  main.rs  view.rs  views.rs
subscribing_api/src/views/: query_params.rs
subscribing_api/src/views/subscriptions/: create.rs  create_subscription.rs  delete.rs  get.rs  get_subscriptions.rs  mod.rs  update.rs  update_subscription.rs
subscribing_api/src/views/users/: create.rs  delete.rs  get.rs  update.rs
