[package]
name = "database_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.15", features = ["macros",  "serde", "serde-well-known"] } 
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.65"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "mysql", "time" ] }

[features]
admin = []
create = []
read = []
update = []
delete = []
crud = ["create", "read", "update", "delete"]