[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database_api = { path = "../database_api", features = ["crud", "admin"]}
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.65"
reqwest = { version = "0.11.12", fetures = ["json"] }
time = { version = "0.3.15", features = ["macros",  "serde", "serde-well-known"] } 
lettre = "0.10.1"
dotenv = "0.15.0"