[package]
name = "subscribing_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database_api = { path = "../database_api", features = ["crud", "admin"]}
axum = { version="0.5.16", features = ["query", "axum-macros"] }
axum-macros = "0.2.3"
hyper = { version = "0.14.20", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
anyhow = "1.0.65"
time = { version = "0.3.15", features = ["macros",  "serde", "serde-well-known"] } 